--- a/structured_output.ipynb
+++ b/structured_output.ipynb
@@ -114,6 +114,35 @@
    "source": [
     "messages[-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84cc7c1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person(name='Steve Alila', likes=['AI development', 'building algorithms', 'playing chess'])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response[\"structured_response\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ab653a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
